force-app/main/default/objects/Photo__c/fields/Cover__c.field-meta.xml
<CustomField>
    <fullName>Cover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cover</label>
    <type>Checkbox</type>
</CustomField>