force-app/main/default/objects/Photo__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Photos</relationshipLabel>
    <relationshipName>Photos</relationshipName>
    <type>Lookup</type>
</CustomField>