force-app/main/default/objects/Photo__c/fields/Stock_ID__c.field-meta.xml
<CustomField>
    <fullName>Stock_ID__c</fullName>
    <label>Stock ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>