force-app/main/default/objects/Photo__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <type>Url</type>
</CustomField>